codegen/ui_tests/export_fn_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<T, Box<EvalAltResult>>
  --> ui_tests/export_fn_raw_noreturn.rs:10:13
   |
10 | #[export_fn(return_raw)]
   |             ^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_raw_noreturn.rs:17:5
   |
17 |     test_fn(&mut n);
   |     ^^^^^^^ not found in this scope
